font family fix and svg alignment on safari

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Sora');
+
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   /* font-family: 'Encode Sans Expanded', sans-serif; */
-  font-family: "Sora";
+  font-family: "Sora" !important;
 }
 
 .loadingScreenContainer {
